--- a/.github/workflows/loom.yml
+++ b/.github/workflows/loom.yml
@@ -27,7 +27,7 @@ jobs:
     name: loom tokio::sync
     # base_ref is null when it's not a pull request
     if: github.repository_owner == 'tokio-rs' && (contains(github.event.pull_request.labels.*.name, 'R-loom-sync') || (github.base_ref == null))
-    runs-on: ubuntu-latest
+    runs-on: hathora
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust ${{ env.rust_stable }}
@@ -43,7 +43,7 @@ jobs:
     name: loom time driver
     # base_ref is null when it's not a pull request
     if: github.repository_owner == 'tokio-rs' && (contains(github.event.pull_request.labels.*.name, 'R-loom-time-driver') || (github.base_ref == null))
-    runs-on: ubuntu-latest
+    runs-on: hathora
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust ${{ env.rust_stable }}
@@ -59,7 +59,7 @@ jobs:
     name: loom current-thread scheduler
     # base_ref is null when it's not a pull request
     if: github.repository_owner == 'tokio-rs' && (contains(github.event.pull_request.labels.*.name, 'R-loom-current-thread') || (github.base_ref == null))
-    runs-on: ubuntu-latest
+    runs-on: hathora
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust ${{ env.rust_stable }}
@@ -75,7 +75,7 @@ jobs:
     name: loom multi-thread scheduler
     # base_ref is null when it's not a pull request
     if: github.repository_owner == 'tokio-rs' && (contains(github.event.pull_request.labels.*.name, 'R-loom-multi-thread') || (github.base_ref == null))
-    runs-on: ubuntu-latest
+    runs-on: hathora
     strategy:
       matrix:
         include:
@@ -100,7 +100,7 @@ jobs:
     name: loom ALT multi-thread scheduler
     # base_ref is null when it's not a pull request
     if: github.repository_owner == 'tokio-rs' && (contains(github.event.pull_request.labels.*.name, 'R-loom-multi-thread-alt') || (github.base_ref == null))
-    runs-on: ubuntu-latest
+    runs-on: hathora
     strategy:
       matrix:
         include:
