--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -18,7 +18,7 @@ jobs:
       checks: write
       contents: read
       issues: write
-    runs-on: ubuntu-latest
+    runs-on: hathora
     steps:
     - uses: actions/checkout@v4
     - uses: EmbarkStudios/cargo-deny-action@v2
