--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: ["master", "tokio-*.x"]
+    branches: ["hathora*", "tokio-*.x"]
   pull_request:
-    branches: ["master", "tokio-*.x"]
+    branches: ["hathora*", "tokio-*.x"]
 
 name: CI
 
